# Veil

./: .gitignore  CAT_PROTOCOL.md  CLAUDE.md  Cargo.toml  DOCUMENTATION.md  IMPLEMENTATION_STATUS.md  LICENSE  OFFERS_STATUS.md  PERFORMANCE_ANALYSIS.md  README.md  RECURSION_STATUS.md  SIMULATOR.md  STEALTH_ADDRESSES.md  cargo.toml  demo_offers.sh  install-deps.sh  nullifier.md  protocol.md  run_benchmark.sh  run_examples.sh  sim_demo.sh  sim_demo_usage.txt  test_cat_commitment.rs  test_recursion.rs  test_simple.rs  veil_crypto_design_v2.md
.cargo/: config.toml
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml
backends/: common.rs  mock_impl.rs
backends/mock/: Cargo.toml
backends/mock/src/: backend.rs  lib.rs
backends/risc0/: Cargo.toml  build.rs
backends/risc0/guest/: Cargo.toml
backends/risc0/guest/src/: main.rs
backends/risc0/guest_recursive/: Cargo.toml
backends/risc0/guest_recursive/src/: main.rs
backends/risc0/guest_settlement/: Cargo.toml
backends/risc0/guest_settlement/src/: main.rs
backends/risc0/src/: backend.rs  common.rs  lib.rs  methods.rs  recursive.rs
backends/sp1/: Cargo.toml  build.rs
backends/sp1/program/: Cargo.toml
backends/sp1/program/src/: main.rs
backends/sp1/program_recursive/: Cargo.toml
backends/sp1/program_recursive/src/: main.rs
backends/sp1/program_settlement/: Cargo.toml
backends/sp1/program_settlement/src/: main.rs
backends/sp1/src/: backend.rs  common.rs  lib.rs  methods.rs  recursive.rs
clvm_zk_core/: Cargo.toml
clvm_zk_core/src/: backend_utils.rs  clvm_parser.rs  coin_commitment.rs  lib.rs  merkle.rs  operators.rs  parser.rs  types.rs
clvm_zk_core/src/chialisp/: ast.rs  compiler_utils.rs  frontend.rs  mod.rs  parser.rs
docs/: CHIA_OPCODES.md  ring_spend_fix.md
examples/: alice_bob_lock.rs  backend_benchmark.rs  benchmark_aggregation.rs  generate_proof_database.rs  performance_profiling.rs  precompile_delegated.rs  profile_compilation.rs  recursive_aggregation.rs
scripts/: precompile_puzzles.rs
src/: backends.rs  cli.rs  crypto_utils.rs  internal.rs  lib.rs  main.rs  payment_keys.rs  simulator.rs  testing_helpers.rs
src/protocol/: encrypted_notes.rs  mod.rs  offers.rs  puzzles.rs  recursive.rs  settlement.rs  spender.rs  structures.rs
src/wallet/: hd_wallet.rs  mod.rs  stealth.rs  tests.rs  types.rs
test_proof_database_risc0/: metadata.csv
tests/: bls_signature_tests.rs  expression_tests.rs  fuzz_tests.rs  parameter_tests.rs  performance_tests.rs  proof_validation_tests.rs  recursive_aggregation_tests.rs  security_tests.rs  signature_integration_tests.rs  signature_tests.rs  simulator_tests.rs  test_cat_commitment.rs  test_condition_transformation.rs  test_conditional_spend.rs  test_create_coin_privacy.rs  test_large_atoms.rs  test_large_values.rs  test_mock_recursion.rs  test_offers_basic.rs  test_payment_scanning.rs  test_precompiled_bytecode.rs  test_recursion.rs  test_recursion_basic.rs  test_ring_balance_enforcement.rs  test_ring_spend_debug.rs  test_settlement_api.rs  test_settlement_recursive.rs  test_simulator_create_coin.rs  test_transfers.rs  verification_security_tests.rs
tests/common/: mod.rs
