[package]
name = "clvm-zk-core"
version = "0.1.0"
edition = "2021"
description = "core clvm evaluation engine and shared types for clvm-zk"

[features]
default = []
std = ["clvm_tools_rs/std"]
sha2-hasher = ["dep:sha2"]
risc0 = ["dep:risc0-zkvm", "dep:bls12_381", "sha2-hasher"]
sp1 = ["sha2-hasher"]

[dependencies]
serde = { version = "1.0.219", features = ["derive", "alloc"], default-features = false }
borsh = { version = "1.5.7", default-features = false, features = ["derive"] }
sha2 = { version = "0.10", default-features = false, optional = true }
risc0-zkvm = { version = "3.0.3", default-features = false, optional = true }
bls12_381 = { git = "https://github.com/risc0/zkcrypto-bls12_381.git", default-features = false, optional = true }
k256 = { version = "0.13", features = ["ecdsa", "sha256"], default-features = false }
thiserror = { version = "2.0.12", default-features = false }

# clvm_tools_rs - Chia's reference CLVM implementation with VeilEvaluator (no_std compatible)
clvm_tools_rs.workspace = true

# ensure no_std compatibility
[lib]
name = "clvm_zk_core"
path = "src/lib.rs"