[package]
name = "clvm-zk-risc0"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[dependencies]
borsh = { version = "1.5.7", features = ["derive"] }
risc0-zkvm = { version = "3.0.3", default-features = false, features = ["std", "unstable", "client"] }
clvm-zk-core = { path = "../../clvm_zk_core" }

[build-dependencies]
risc0-build = "3.0.3"

[package.metadata.risc0]
methods = ["guest"]

