[package]
name = "clvm-risc0-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = "3.0.3"
serde = { version = "1.0.219", features = ["derive"] }
borsh = { version = "1.5.7", features = ["derive"] }
clvm-zk-core = { path = "../../../clvm_zk_core" }
# ecdsa signature verification support with risc0 acceleration - use exact versions for patches
k256 = { version = "=0.13.3", features = ["ecdsa", "arithmetic"] }
sha2 = { version = "=0.10.8" }
# BLS signature verification support with RISC0 precompiles
bls12_381 = { git = "https://github.com/risc0/zkcrypto-bls12_381.git", default-features = false, features = ["groups", "pairings", "experimental"] }

# RISC0 optimized patches for maximum performance in guest
[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-bigint", tag = "v0.5.5-risczero.0" }



