[package]
name = "clvm-risc0-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = "3.0.3"
clvm-zk-core = { path = "../../../clvm_zk_core" }
# ecdsa signature verification support with risc0 acceleration - use risc0's patched sha2
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
# BLS signature verification support with RISC0 precompiles
bls12_381 = { git = "https://github.com/risc0/zkcrypto-bls12_381.git", default-features = false, features = ["groups", "pairings", "experimental"] }





